# PianoLED-Learn

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-pi.txt  sitecustomize.py  tailwind.config.js
data/keymaps/: default_88.json
data/settings/: settings.json  settings.local.example.json
deploy/systemd/: install-pi-service.sh  piano-led-live.service
docs/architecture/: dependencies.md  overview.md  pi-install-notes.md  pi-service.md
docs/stages/: README.md  stage-00-project-skeleton.md  stage-01-realtime-piano-to-led.md  stage-02-settings-and-keymap-generation.md  stage-03-calibration-workflow.md  stage-04-tablet-web-ui-foundation.md  stage-05-midi-playback.md  stage-06-practice-mode.md  stage-07-falling-notes-display.md  stage-08-musicxml-score-view.md
old-project/: .gitignore  README.md  autiubstakkpiz2.sh  instructions.md
old-project/Docs/: features.md
old-project/config/: default_settings.xml
old-project/freecad/: bracketv1-Body.3mf  bracketv1.FCStd
old-project/lib/: connectall.py  functions.py  learnmidi.py  ledsettings.py  log_setup.py  menulcd.py  midi_event_processor.py  paths.py  platform.py  profile_manager.py  savemidi.py  usersettings.py
old-project/rpi_ws281x-wheel/: Dockerfile
old-project/webinterface/: __init__.py  views.py  views_api.py
piano_led/: __init__.py  __main__.py
src/piano_led/: __init__.py  __main__.py  app.py  main.py
tests/: test_entrypoint.py
tests/app/: __init__.py  test_build_application.py
tests/config/: __init__.py  test_settings.py
tests/core/: __init__.py  (+1 more)
(+77 files in other folders)
