[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piano-led"
version = "0.1.0"
description = "Piano LED visualizer and learning assistant for Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
